내장 컨텐츠 정리

--- a/assets/01-html/06-embedded/02-img_element.html
+++ b/assets/01-html/06-embedded/02-img_element.html
@@ -22,19 +22,25 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>img {</li>
-					<li class="indent">display: inline-block;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="img element">
+				<textarea readonly="readonly">
+					img {
+						display: inline-block;
+					}
+				</textarea>
 			</div>
 		</div>
 
-		<div class="view_editor ex_code mt_l" data-target="html/06-embedded/6.2.img_element.html">
-			<h3 class="ve_tit">DOCTYPE 별 문법</h3>
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
+		<div class="line_code mt_m">
+			<strong class="t_blue weight-600">DOCTYPE 별 문법 :</strong>
+			<div class="uk_gist_code_box indent mt_s" data-tit="img element">
+				<textarea readonly="readonly">
+					<!-- HTML -->
+					<img src="images/html/content-venn.png" alt="HTML 콘텐츠 모델">
+
+					<!-- XHTML -->
+					<img src="images/html/content-venn.png" alt="HTML 콘텐츠 모델" />
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -88,10 +94,14 @@
 			<ol class="ol_lst mt_s indent">
 				<li>#맵이름 값 : 해시 문자(#)와 함께 사용할 <code>&lt;map&gt;</code> 요소의 name 속성값을 명시합니다.</li>
 			</ol>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.2.img_element_usemap.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="img element [usemap]" data-ex="img_area">
+				<textarea readonly="readonly">
+					<img src="/examples/images/img_imagemap.jpg" alt="진실 혹은 거짓" usemap="#vending" style="width:320px; height:240px" />
+					<map name="vending">
+						<area>
+						<area>
+					</map>
+				</textarea>
 			</div>
 		</article>
 
@@ -160,9 +170,97 @@
 				<li>sizes 속성은 쉼표(,)로 구분된 미디어조건(선택적)과 그에 따라 최적화되어 출력될 이미지 크기를 지정합니다.</li>
 				<li>src 속성은 srcset을 사용할 수 없는 환경에서 동작합니다.</li>
 			</ol>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.2.img_element_sizes.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
+
+			<div class="mt_m">
+				<strong class="t_blue weight-600">sizes 기본 문법 :</strong>
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+					<textarea readonly="readonly">
+						<img srcset="/images/image_960.jpg 960w, /images/people_575.jpg 575w"
+							 sizes="(min-width: 960px) 50vw, (min-width: 575px) 75vw, 100vw"
+							 src="/images/people_575.jpg" alt="people">
+
+						<img srcset="경로 원본크기, 경로 원본크기, 경로 원본크기"
+							 sizes="(미디어조건) 최적화출력크기, (미디어조건) 최적화출력크기, 기본출력크기"
+							 src="경로" alt="대체텍스트">
+					</textarea>
+				</div>
+			</div>
+
+			<div class="mt_m">
+				<strong class="t_blue weight-600">미디어 조건 예 :</strong>
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+					<textarea readonly="readonly">
+						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
+							 sizes="(min-width: 1000px) 700px"
+							 src="default.png" alt="default">
+					</textarea>
+				</div>
+				<p class="indent mt_ms">
+					뷰포트 너비가 400px 이하일 때 small.png(400px)가 사용됩니다.<br />
+					뷰포트 너비가 401~700px 일 때 medium.png(700px)가 사용됩니다.<br />
+					뷰포트 너비가 701~999px 일 때 large.png(1000px)가 사용됩니다.<br />
+					뷰포트 너비가 1000px 이상일 때 medium.png(700px)가 사용됩니다.<br />
+				</p>
+				<p class="indent mt_s">
+					sizes="(min-width: 1000px) 700px"에서 (min-width: 1000px)은 ‘뷰포트 너비(가로)가 1000px 이상일 때’를 의미하며,<br />
+					이어나오는 700px은 그 조건일 때 이미지를 ‘700px로 최적화 출력하겠다’를 의미합니다.<br />
+					그렇다면 700px로 이미지를 출력하기 위해 srcset 목록에서 사용될 최적의 이미지는 medium.png이며,<br />
+					결과로 뷰포트 너비(가로)가 1000px 이상일 때 medium.png가 사용되었습니다.
+				</p>
+			</div>
+
+			<div class="mt_m">
+				<strong class="t_blue weight-600">미디어 조건 생략 예 :</strong>
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+					<textarea readonly="readonly">
+						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
+							 sizes="500px"
+							 src="default.png" alt="default">
+					</textarea>
+				</div>
+				<p class="indent mt_ms">
+					위 예제의 결과로, 뷰포트 너비와 상관없이 medium.png만 사용됩니다.<br />
+					또한 medium.png는 500px의 크기를 가집니다.(원래는 700px 크기의 이미지입니다.)
+				</p>
+			</div>
+
+			<div class="mt_m">
+				<strong class="t_blue weight-600">sizes는 없고 width만 있는 경우 예 :</strong>
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+					<textarea readonly="readonly">
+						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
+							 width="500"
+							 src="default.png" alt="default">
+					</textarea>
+				</div>
+				<p class="indent mt_ms">
+					위 예제의 결과로,<br />
+					뷰포트 너비가 400px 이하일 때 small.png가 사용됩니다.<br />
+					뷰포트 너비가 401~700px 일 때 medium.png가 사용됩니다.<br />
+					뷰포트 너비가 701px 이상일 때 large.png가 사용됩니다.<br />
+					뷰포트 너비에 따라 사용되는 이미지가 달라지지만 크기는 500px로 고정되었습니다.
+				</p>
+				<p class="indent mt_s">
+					width는 이미지의 ‘출력 크기’만 지정하는 데 반해, sizes는 이미지의 ‘출력 크기’ + ‘최적 크기’도 함께 지정하는 개념입니다.<br />
+					따라서 sizes="500px"이 지정된 첫번째 예제는 500px에 최적화된 이미지로 medium.png를 사용했고 이미지 크기도 500px로 설정한 것입니다.
+				</p>
+				<p class="indent mt_s">
+					sizes와 width를 같이 작성할 경우 width가 우선합니다.
+				</p>
+			</div>
+
+			<div class="mt_m">
+				<strong class="t_blue weight-600">혼합하여 사용하는 경우 예 :</strong>
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+					<textarea readonly="readonly">
+						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
+							 sizes="(min-width: 701px) 1000px, (min-width: 401px) 700px, 400px"
+							 src="default.png" alt="default">
+
+						<!-- 위 예제는 아래와 동일하기 때문에 sizes를 사용할 필요가 없음 -->
+						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
+							 src="default.png" alt="default">
+					</textarea>
 				</div>
 			</div>
 		</article>
@@ -194,10 +292,28 @@
 				<code>&lt;img&gt;</code> 요소의 longdesc 속성은 이미지에 대한 alt 속성의 설명이 부족한 경우 longdesc 속성을 제공하여 부가적인 설명을 제공하는 URL을 명시합니다.<br>
 				현재는 접근성 관련하여 이 속성보다는 다른방법으로 대체하는 것을 권장합니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.2.img_element_longdesc.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="img element [longdesc]">
+					<textarea readonly="readonly">
+						<header>
+							<h1>The Lady of Shalott</h1>
+							<p>A poem by Alfred Lord Tennyson</p>
+						</header>
+
+						<img src="shalott.jpeg" alt="Painting - a young woman with long hair, sitting in a wooden boat. Full description below."
+							 longdesc="#des">
+						<p><a href="#des">Description of the painting</a>.</p>
+
+						<!-- Full Recitation of Alfred, Lord Tennyson’s Poem.  -->
+
+						...
+						...
+						...
+						<p id="des">The woman in the painting is wearing a flowing white dress. A large piece of intricately
+							patterned fabric is draped over the side. In her right hand she holds the chain mooring the boat. Her expression
+							is mournful. She stares at a crucifix lying in front of her. Beside it are three candles. Two have blown out.
+							<a href="https://bit.ly/5HJvVZ">Further information about the painting</a>.
+						</p>
+					</textarea>
 			</div>
 		</article>
 	</section>
