--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -14,12 +14,12 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>area {</li>
-					<li class="indent">display: none;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="area element">
+				<textarea readonly="readonly">
+					area {
+						display: none;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -151,7 +151,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.4.area_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
