--- a/assets/01-html/06-embedded/01-iframe_element.html
+++ b/assets/01-html/06-embedded/01-iframe_element.html
@@ -22,12 +22,12 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>iframe:focus {</li>
-					<li class="indent">outline: none;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="iframe element">
+				<textarea readonly="readonly">
+					iframe:focus {
+						outline: none;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -40,10 +40,12 @@
 			<p class="mt_s">
 				<code>&lt;iframe&gt;</code> 요소에 보일 문서의 URL를 명시합니다.(address of the resource)
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_src.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="iframe element [src]">
+				<textarea readonly="readonly">
+					<iframe src="https://uxkm.github.io">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+				</textarea>
 			</div>
 		</article>
 
@@ -54,10 +56,13 @@
 				HTML 4.01에서 <code>&lt;iframe&gt;</code> 요소의 width, height 속성값은 픽셀(pixel) 단위뿐만 아니라 퍼센트(%) 단위로도 정의할 수 있었습니다.<br>
 				하지만 HTML5에서는 오직 픽셀(pixel) 단위만을 사용해야 합니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_width&height.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="iframe element [width & height]">
+				<textarea readonly="readonly">
+					<iframe src="https://uxkm.github.io/html/" height="400" width="400">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+					<a href="https://uxkm.github.io/" target="myframe">UXKM</a>
+				</textarea>
 			</div>
 		</article>
 
@@ -69,10 +74,13 @@
 				<code>&lt;input&gt;</code> 요소 또는 <code>&lt;button&gt;</code> 요소의 formtarget 속성의 속성값으로 사용될 수 있습니다.<br>
 				XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_name.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="iframe element [name]">
+				<textarea readonly="readonly">
+					<iframe src="https://uxkm.github.io/html/" name="myframe">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+					<a href="https://uxkm.github.io/" target="myframe">UXKM</a>
+				</textarea>
 			</div>
 		</article>
 
@@ -85,12 +93,14 @@
 				srcdoc 속성은 HTML5에서 새롭게 추가된 속성입니다.<br>
 				<mark>Edge, Internet Explorer에서는 지원하지 않습니다.</mark>
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_srcdoc.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="iframe element [srcdoc]">
+				<textarea readonly="readonly">
+					<iframe srcdoc="<p>Hello World!!</p>" src="https://uxkm.github.io/">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+				</textarea>
 			</div>
-			<aside class="browser_support mt_s" data-tit="srcdoc">
+			<aside class="browser_support mt_m" data-tit="srcdoc">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -173,23 +183,57 @@
 				</ol>
 			</div>
 
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_sandbox1.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box indent mt_ms" data-tit="iframe element [sandbox]">
+				<textarea readonly="readonly">
+					<iframe sandbox src="/"></iframe> <!-- 읽기 전용의 단순 웹페이지 -->
+					<!--
+					위의 제한이 너무 엄격하여 iframe 안의 페이지가 동작하지 않을때는 sandbox 속성에 다음과 같은 값을 지정하여 샌드박스 제한을 완화할 수 있다.
+
+					allow-forms : 폼 요소로 페이지를 호출할 수 있음
+					allow-scripts : 자바스크립트를 사용할 수 있음, 그러나 윈도우 팝업 iframe 요소 삽입을 금지
+					allow-same-origin : 같은 도메인에 소속된 리소스를 이용할 수 있음 (서버와의 통신, 스토리지 이용등)
+					-->
+					<iframe sandbox="allow-scripts allow-forms" src="/"></iframe>
+				</textarea>
 			</div>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_sandbox2.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box indent mt_ms" data-tit="iframe element [sandbox]">
+				<textarea readonly="readonly">
+					<iframe src="/examples/media/iframe_sandbox.html" sandbox>
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+
+					<iframe src="/examples/media/iframe_sandbox.html">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+
+					<iframe src="/examples/media/iframe_sandbox_form.html" sandbox="">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+
+					<iframe src="/examples/media/iframe_sandbox_form.html" sandbox="allow-forms">
+						<p>현재 사용 중인 브라우저는 iframe 요소를 지원하지 않습니다!</p>
+					</iframe>
+				</textarea>
 			</div>
-			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_sandbox3.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box indent mt_ms" data-tit="iframe element [sandbox]">
+				<textarea readonly="readonly">
+					<article>
+						<footer> Thirteen minutes ago, <a href="/users/ch">ch</a> wrote: </footer>
+						<iframe sandbox srcdoc="<p>did you get a cover picture yet?"></iframe>
+					</article>
+					<article>
+						<footer> Nine minutes ago, <a href="/users/cap">cap</a> wrote: </footer>
+						<iframe sandbox srcdoc="<p>Yeah, you can see it <a href="/gallery?mode=cover&amp;page=1">in my gallery</a>."></iframe>
+					</article>
+					<article>
+						<footer> Five minutes ago, <a href="/users/ch">ch</a> wrote: </footer>
+						<iframe sandbox srcdoc="<p>hey that's earl's table.
+						<p>you should get earl&amp;me on the next cover."></iframe>
+					</article>
+				</textarea>
 			</div>
 
-			<aside class="browser_support mt_s" data-tit="sandbox">
+			<aside class="browser_support mt_m" data-tit="sandbox">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -263,8 +307,8 @@
 		</div>
 
 		<div class="view_editor edit_code mt_l" data-target="html/06-embedded/6.1.iframe_element.html">
-			<h3 class="ve_tit">예제aaa</h3>
-			<div class="uk_editor min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">예제</h3>
+			<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
