--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -18,12 +18,12 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>map {</li>
-					<li class="indent">display: inline;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="map element">
+				<textarea readonly="readonly">
+					map {
+						display: inline;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -41,7 +41,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.3.map_element.html">
 		<h3 class="ve_tit">예제</h3>
-		<div class="uk_editor min-height-400" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent min-height-400" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
