--- a/assets/01-html/06-embedded/09-source_element.html
+++ b/assets/01-html/06-embedded/09-source_element.html
@@ -197,8 +197,27 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/06-embedded/6.9.source_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="source element">
+			<textarea readonly="readonly">
+				<picture>
+					<source media="(min-width: 700px)" srcset="/examples/images/people_960.jpg">
+					<source media="(min-width: 400px)" srcset="/examples/images/people_575.jpg">
+					<img src="/examples/images/people_200.jpg" alt="People">
+				</picture>
+
+				<video controls width="250" height="200" muted>
+					<source src="media/flower.webm" type="video/webm">
+					<source src="media/flower.mp4" type="video/mp4">
+					This browser does not support the HTML5 video element.
+				</video>
+
+				<video controls>
+					<source src="foo.webm" type="video/webm">
+					<source src="foo.ogg" type="video/ogg">
+					<source src="foo.mov" type="video/quicktime">
+					죄송합니다. 당신의 브라우저는 HTML5 동영상을 지원하지 않습니다.
+				</video>
+			</textarea>
 		</div>
 	</section>
 
