--- a/assets/01-html/06-embedded/10-svg_element.html
+++ b/assets/01-html/06-embedded/10-svg_element.html
@@ -56,7 +56,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.10.svg_element.html">
 		<h3 class="ve_tit">예제</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
