--- a/assets/01-html/06-embedded/13-param_element.html
+++ b/assets/01-html/06-embedded/13-param_element.html
@@ -16,12 +16,12 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>param {</li>
-					<li class="indent">display: none;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="param element">
+				<textarea readonly="readonly">
+					param {
+						display: none;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -50,7 +50,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.13.param_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
