--- a/assets/01-html/07-edits/01-del_element.html
+++ b/assets/01-html/07-edits/01-del_element.html
@@ -16,12 +16,12 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>del {</li>
-					<li class="indent">text-decoration: line-through;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="del element">
+				<textarea readonly="readonly">
+					del {
+						text-decoration: line-through;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -48,7 +48,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/07-edits/7.1.del_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
