표 데이터 컨텐츠 정리

--- a/assets/01-html/08-table/04-col_element.html
+++ b/assets/01-html/08-table/04-col_element.html
@@ -16,8 +16,17 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/08-table/8.4.colgroup_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="col element">
+			<textarea readonly="readonly">
+				<table>
+					<colgroup>
+						<col>
+						<col>
+						<col>
+					</colgroup>
+					...
+				</table>
+			</textarea>
 		</div>
 	</section>
 
