--- a/assets/01-html/08-table/07-tfoot_element.html
+++ b/assets/01-html/08-table/07-tfoot_element.html
@@ -32,21 +32,21 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>tfoot {</li>
-					<li class="indent">display: table-footer-group;</li>
-					<li class="indent">border-color: inherit;</li>
-					<li class="indent">vertical-align: middle;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="tfoot element">
+				<textarea readonly="readonly">
+					tfoot {
+						display: table-footer-group;
+						border-color: inherit;
+						vertical-align: middle;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.7.tfoot_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
