--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -24,15 +24,15 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>th {</li>
-					<li class="indent">display: table-cell;</li>
-					<li class="indent">vertical-align: inherit;</li>
-					<li class="indent">font-weight: bold;</li>
-					<li class="indent">text-align: center;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="th element">
+				<textarea readonly="readonly">
+					th {
+						display: table-cell;
+						vertical-align: inherit;
+						font-weight: bold;
+						text-align: center;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -88,14 +88,14 @@
 		</article>
 	</section>
 
-	<figure class="img_figure mt_l">
+	<figure class="img_figure indent mt_l">
 		<img src="/ukncs/images/html/uxkm_img_table_rowcol.svg" alt="html 요소 설명">
 		<figcaption>[table 요소의 부분 설명]</figcaption>
 	</figure>
 
 	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.9.th_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
