--- a/assets/01-html/08-table/10-td_element.html
+++ b/assets/01-html/08-table/10-td_element.html
@@ -26,13 +26,13 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>td {</li>
-					<li class="indent">display: table-cell;</li>
-					<li class="indent">vertical-align: inherit;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="td element">
+				<textarea readonly="readonly">
+					td {
+						display: table-cell;
+						vertical-align: inherit;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -68,14 +68,14 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.10.td_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.10.td_element_aria.html">
 		<h2 class="ve_tit">ARIA(Accessible Rich Internet Applications)를 활용한 table 예시</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
